--- a/bookaclass.html
+++ b/bookaclass.html
@@ -49,8 +49,7 @@
     <!-- Meet Your Bartenders -->
     <section class="bartender-intro">
       <h3>Meet Your Bartenders</h3>
-      <p>These lovely bartenders, have a combined experience of 34 years, delivering fantastically-made cocktails, but most of all, specialising in gin-cocktails.</p>
-      <p>When you book a class with us, you will be taught by one of these bartenders and learn so much from their years of experience.</p>
+      <p>These lovely bartenders, have a combined experience of 34 years, delivering fantastically-made cocktails, but most of all, specialising in gin-cocktails.<br>When you book a class with us, you will be taught by one of these bartenders and learn so much from their years of experience.</p>
       <br>
       <br>
       <div class="container">
