--- a/index.html
+++ b/index.html
@@ -47,17 +47,17 @@
     <!-- /.navbar -->
     <!-- Book a class -->
     <div>
-      <img src="assets/images/rangpur-gin-2560-1000.png" class="img-fluid" alt="Rangpur Gin">
-      <div class="card-img-overlay">
-        <p class="card-title">Love Gin?</p>
-        <p class="card-text">Learn how to make your favourite gin-based drinks with us!*</p>
-        <a class="btn btn-light stretched-link" href="bookaclass.html">Book Now</a>
+      <img id="hero-image" src="assets/images/rangpur-gin-2560-1000.png" class="img-fluid" alt="Rangpur Gin">
+      <div class="card text-center">
+        <div class="card-body">
+          <h5 class="card-title">Love Gin?</h5>
+          <p class="card-text">Learn how to make your favourite gin-based drinks with us!*</p>
+          <a href="bookaclass.html" class="btn btn-light stretched-link">Book Now</a>
+        </div>
+        <div class="text-muted">
+          *You must be at least 18 years old to book a class with us.
+        </div>
       </div>
-      <div class="card-img-overlay">
-        <p class="disclaimer">*You must be at least 18 years old to book a class with us.</p>
-      </div>
-    </div>
-    <!-- /.book a class -->
     <hr>
     <!-- Reviews -->
     <section class="quote">
@@ -176,7 +176,7 @@
         <!-- /.social links grid container -->
         <hr>
         <!-- Section: CTA -->
-        <section>
+        <section class="">
           <p class="d-flex justify-content-center align-items-center">
             <span class="me-3">Book a class with us!</span>
             <a class="btn btn-light" href="bookaclass.html">Book Now</a>
