adjust card overlay text for all screen devices

--- a/index.html
+++ b/index.html
@@ -45,19 +45,21 @@
       </div>
     </nav>
     <!-- /.navbar -->
-    <!-- Book a class -->
+    <!-- Hero Image -->
     <div>
       <img id="hero-image" src="assets/images/rangpur-gin-2560-1000.png" class="img-fluid" alt="Rangpur Gin">
-      <div class="card text-center">
+      <div class="card">
         <div class="card-body">
           <h5 class="card-title">Love Gin?</h5>
           <p class="card-text">Learn how to make your favourite gin-based drinks with us!*</p>
-          <a href="bookaclass.html" class="btn btn-light stretched-link">Book Now</a>
+          <a href="bookaclass.html" class="cta-btn btn btn-light stretched-link">Book Now</a>
         </div>
-        <div class="text-muted">
+        <div class="disclaimer">
           *You must be at least 18 years old to book a class with us.
         </div>
       </div>
+    </div>
+    <!-- /.hero image -->
     <hr>
     <!-- Reviews -->
     <section class="quote">
@@ -156,7 +158,6 @@
         </div>
     </section>
     <!-- /.slideshow -->
-    <br>
     <hr>
     <!-- Footer -->
     <section>
