--- a/contactus.html
+++ b/contactus.html
@@ -45,7 +45,37 @@
       </div>
     </nav>
     <!-- /.navbar -->
-    
+    <hr>
+    <!-- Hero Image -->
+    <div>
+      <img src="assets/images/five-gins.png" class="img-fluid" alt="row of 5 gin cocktails">
+    </div>
+    <!-- /.hero image -->
+    <hr>
+    <!-- Contact Us -->
+    <section class="container-fluid">
+      <div class="row bg-color-contact">
+          <div class="col">
+            <h3>Need some help?</h3>
+            <h6 class="text-center">Send us an email today!</h6>
+            <br>
+            <div class="center-form">
+                <form>
+                    <input type="text" name="name" id="fullname" class="form-control" placeholder="Name" required />
+                    <input type="email" name="email" id="emailaddress" class="form-control" placeholder="Email" required />
+                    <textarea rows="5" name="ginbooking" id="ginbooking" class="form-control" placeholder="Gin Class Enquiry" required></textarea>
+                    <br>
+                    <div class="form-row text-center">
+                        <div class="col">
+                            <button type="submit" class="btn btn-secondary">Send Enquiry</button>
+                        </div>
+                    </div>
+                </form>
+            </div>
+          </div>
+      </div>
+    </section>
+    <!-- /.contact us -->
     <hr>
     <!-- Footer -->
     <section>
