--- a/contactus.html
+++ b/contactus.html
@@ -79,7 +79,14 @@
     <hr>
     <!-- Google Map -->
     <section>
-      <div id="map"></div>
+      <iframe
+        width="100%"
+        height="400"
+        style="border:0"
+        loading="lazy"
+        allowfullscreen
+        src="https://www.google.com/maps/embed/v1/place?q=place_id:ChIJldu7N84EdkgRiy39aFVBIFE&key=AIzaSyAMptgYoxpwQ5ZA-ztcsITFsTN3AGATTSM">
+      </iframe>
     </section>
     <!-- /.google map -->
     <hr>
@@ -124,18 +131,5 @@
     <!-- Bootstrap Bundles -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
-    <!-- Google Maps API -->
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAMptgYoxpwQ5ZA-ztcsITFsTN3AGATTSM&callback=initMap&v=weekly" async></script>
-    <script>
-      function initMap() {
-        var map = new google.maps.Map(document.getElementById("map"), {
-          zoom: 3,
-          center: {
-            lat: 51.5073219,
-            lng: -0.1276474
-          }
-        });
-      }
-    </script>
 </body>
 </html>
