change hero image on index page and use jumbotron to accomodate for all devices

--- a/index.html
+++ b/index.html
@@ -52,7 +52,24 @@
     </nav>
     <!-- /.navbar -->
     <!-- Hero Image -->
-    <div>
+    <div class="container-fluid callout-container">
+      <!-- Callout -->
+      <div class="opaque-overlay">&nbsp;</div>
+      <div class="row">
+          <div class="col-12">
+              <section class="callout jumbotron text-center">
+                  <h1 class="jumbotron-header card-title">Love Gin?</h1>
+                  <hr class="block-divider block-divider--green">
+                  <p class="lead card-text">Learn how to make your favourite<br>gin-based drinks with us!*
+                      <span class="d-inline d-sm-none"><br></span>
+                      <br>
+                  <a href="bookaclass.html" class="cta-btn btn btn-light stretched-link">Book Now</a>
+                  <p class="disclaimer"><small>*You must be at least 18 years old<br>to book a class with us.</small></p>
+              </section>
+          </div>
+      </div>
+    </div>
+    <!--<div>
       <img id="hero-image" src="assets/images/rangpur-gin-2560-1000.png" class="img-fluid" alt="Rangpur Gin">
       <div class="card">
         <div class="card-body">
@@ -64,7 +81,7 @@
           *You must be at least 18 years old to book a class with us.
         </div>
       </div>
-    </div>
+    </div>-->
     <!-- /.hero image -->
     <hr>
     <!-- Reviews -->
