--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
           <div class="col-12">
               <section class="callout jumbotron text-center">
                   <h1 class="jumbotron-header card-title">Love Gin?</h1>
-                  <hr class="block-divider block-divider--green">
+                  <hr>
                   <p class="lead card-text">Learn how to make your favourite<br>gin-based drinks with us!*
                       <span class="d-inline d-sm-none"><br></span>
                       <br>
@@ -69,19 +69,6 @@
           </div>
       </div>
     </div>
-    <!--<div>
-      <img id="hero-image" src="assets/images/rangpur-gin-2560-1000.png" class="img-fluid" alt="Rangpur Gin">
-      <div class="card">
-        <div class="card-body">
-          <h5 class="card-title">Love Gin?</h5>
-          <p class="card-text">Learn how to make your favourite gin-based drinks with us!*</p>
-          <a href="bookaclass.html" class="cta-btn btn btn-light stretched-link">Book Now</a>
-        </div>
-        <div class="disclaimer">
-          *You must be at least 18 years old to book a class with us.
-        </div>
-      </div>
-    </div>-->
     <!-- /.hero image -->
     <hr>
     <!-- Reviews -->
@@ -130,6 +117,82 @@
     </section>
     <!-- /.reviews -->
     <hr>
+    <!-- Gallery -->
+    <div id="flex-gallery" class="gin-gallery-container">
+
+      <div class="gallery-image-containers w-3 h-2">
+        <div class="gallery-items">
+          <div class="gin-image">
+            <img src="assets/images/beige-gin-with-toppings.jpg" alt="gin-alcohol">
+          </div>
+        </div>
+      </div>
+
+      <div class="gallery-image-containers w-2 h-2">
+        <div class="gallery-items">
+          <div class="gin-image">
+            <img src="assets/images/cucumis-green-gin.jpg" alt="gin-alcohol">
+          </div>
+        </div>
+      </div>
+
+      <div class="gallery-image-containers w-1 h-2">
+        <div class="gallery-items">
+          <div class="gin-image">
+            <img src="assets/images/gin-shots.jpg" alt="gin-alcohol">
+          </div>
+        </div>
+      </div>
+
+      <div class="gallery-image-containers w-2 h-3">
+        <div class="gallery-items">
+          <div class="gin-image">
+            <img src="assets/images/gunpowder-irish-gin.jpg" alt="gin-alcohol">
+          </div>
+        </div>
+      </div>
+
+      <div class="gallery-image-containers w-2 h-4">
+        <div class="gallery-items">
+          <div class="gin-image">
+            <img src="assets/images/pink-gin.jpg" alt="gin-alcohol">
+          </div>
+        </div>
+      </div>
+
+      <div class="gallery-image-containers w-1 h-3">
+        <div class="gallery-items">
+          <div class="gin-image">
+            <img src="assets/images/pouring-gin.jpg" alt="gin-alcohol">
+          </div>
+        </div>
+      </div>
+
+      <div class="gallery-image-containers w-1 h-4">
+        <div class="gallery-items">
+          <div class="gin-image">
+            <img src="assets/images/white-gin-in-tall-glass.jpg" alt="gin-alcohol">
+          </div>
+        </div>
+      </div>
+
+      <div class="gallery-image-containers w-2 h-1">
+        <div class="gallery-items">
+          <div class="gin-image">
+            <img src="assets/images/group-of-women-drinking-gin.jpg" alt="gin-alcohol">
+          </div>
+        </div>
+      </div>
+
+      <div class="gallery-image-containers w-1 h-1">
+        <div class="gallery-items">
+          <div class="gin-image">
+            <img src="assets/images/yellow-gin.jpg" alt="gin-alcohol">
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- /.gallery -->
     <!-- Slideshow -->
     <section id="slideshow">
       <h3>Gallery</h3>
