remove gallery slideshow on large screen devices and replace with glex grid gallery

--- a/index.html
+++ b/index.html
@@ -118,80 +118,82 @@
     <!-- /.reviews -->
     <hr>
     <!-- Gallery -->
-    <div id="flex-gallery" class="gin-gallery-container">
+    <section id="flex-gallery">
+      <div class="gin-gallery-container">
 
-      <div class="gallery-image-containers w-3 h-2">
-        <div class="gallery-items">
-          <div class="gin-image">
-            <img src="assets/images/beige-gin-with-toppings.jpg" alt="gin-alcohol">
+        <div class="gallery-image-containers w-3 h-2">
+          <div class="gallery-items">
+            <div class="gin-image">
+              <img src="assets/images/beige-gin-with-toppings.jpg" alt="gin-alcohol">
+            </div>
+          </div>
+        </div>
+
+        <div class="gallery-image-containers w-2 h-2">
+          <div class="gallery-items">
+            <div class="gin-image">
+              <img src="assets/images/cucumis-green-gin.jpg" alt="gin-alcohol">
+            </div>
+          </div>
+        </div>
+
+        <div class="gallery-image-containers w-1 h-2">
+          <div class="gallery-items">
+            <div class="gin-image">
+              <img src="assets/images/gin-shots.jpg" alt="gin-alcohol">
+            </div>
+          </div>
+        </div>
+
+        <div class="gallery-image-containers w-2 h-3">
+          <div class="gallery-items">
+            <div class="gin-image">
+              <img src="assets/images/gunpowder-irish-gin.jpg" alt="gin-alcohol">
+            </div>
+          </div>
+        </div>
+
+        <div class="gallery-image-containers w-2 h-4">
+          <div class="gallery-items">
+            <div class="gin-image">
+              <img src="assets/images/pink-gin.jpg" alt="gin-alcohol">
+            </div>
+          </div>
+        </div>
+
+        <div class="gallery-image-containers w-1 h-3">
+          <div class="gallery-items">
+            <div class="gin-image">
+              <img src="assets/images/pouring-gin.jpg" alt="gin-alcohol">
+            </div>
+          </div>
+        </div>
+
+        <div class="gallery-image-containers w-1 h-4">
+          <div class="gallery-items">
+            <div class="gin-image">
+              <img src="assets/images/white-gin-in-tall-glass.jpg" alt="gin-alcohol">
+            </div>
+          </div>
+        </div>
+
+        <div class="gallery-image-containers w-2 h-1">
+          <div class="gallery-items">
+            <div class="gin-image">
+              <img src="assets/images/group-of-women-drinking-gin.jpg" alt="gin-alcohol">
+            </div>
+          </div>
+        </div>
+
+        <div class="gallery-image-containers w-1 h-1">
+          <div class="gallery-items">
+            <div class="gin-image">
+              <img src="assets/images/yellow-gin.jpg" alt="gin-alcohol">
+            </div>
           </div>
         </div>
       </div>
-
-      <div class="gallery-image-containers w-2 h-2">
-        <div class="gallery-items">
-          <div class="gin-image">
-            <img src="assets/images/cucumis-green-gin.jpg" alt="gin-alcohol">
-          </div>
-        </div>
-      </div>
-
-      <div class="gallery-image-containers w-1 h-2">
-        <div class="gallery-items">
-          <div class="gin-image">
-            <img src="assets/images/gin-shots.jpg" alt="gin-alcohol">
-          </div>
-        </div>
-      </div>
-
-      <div class="gallery-image-containers w-2 h-3">
-        <div class="gallery-items">
-          <div class="gin-image">
-            <img src="assets/images/gunpowder-irish-gin.jpg" alt="gin-alcohol">
-          </div>
-        </div>
-      </div>
-
-      <div class="gallery-image-containers w-2 h-4">
-        <div class="gallery-items">
-          <div class="gin-image">
-            <img src="assets/images/pink-gin.jpg" alt="gin-alcohol">
-          </div>
-        </div>
-      </div>
-
-      <div class="gallery-image-containers w-1 h-3">
-        <div class="gallery-items">
-          <div class="gin-image">
-            <img src="assets/images/pouring-gin.jpg" alt="gin-alcohol">
-          </div>
-        </div>
-      </div>
-
-      <div class="gallery-image-containers w-1 h-4">
-        <div class="gallery-items">
-          <div class="gin-image">
-            <img src="assets/images/white-gin-in-tall-glass.jpg" alt="gin-alcohol">
-          </div>
-        </div>
-      </div>
-
-      <div class="gallery-image-containers w-2 h-1">
-        <div class="gallery-items">
-          <div class="gin-image">
-            <img src="assets/images/group-of-women-drinking-gin.jpg" alt="gin-alcohol">
-          </div>
-        </div>
-      </div>
-
-      <div class="gallery-image-containers w-1 h-1">
-        <div class="gallery-items">
-          <div class="gin-image">
-            <img src="assets/images/yellow-gin.jpg" alt="gin-alcohol">
-          </div>
-        </div>
-      </div>
-    </div>
+    </section>
     <!-- /.gallery -->
     <!-- Slideshow -->
     <section id="slideshow">
