--- a/bookaclass.html
+++ b/bookaclass.html
@@ -47,10 +47,14 @@
     <!-- /.navbar -->
     <hr>
     <!-- Meet Your Bartenders -->
+    <section>
+      <div id="bartender-heading">
+        <h3>Meet Your Bartenders</h3>
+        <p>These lovely bartenders, have a combined experience of 34 years, delivering fantastically-made cocktails, but most of all, specialising in gin-cocktails.<br>When you book a class with us, you will be taught by one of these bartenders and learn so much from their years of experience.</p>
+      </div>
+      <hr>
+    </section>
     <section class="bartender-intro">
-      <h3>Meet Your Bartenders</h3>
-      <p>These lovely bartenders, have a combined experience of 34 years, delivering fantastically-made cocktails, but most of all, specialising in gin-cocktails.<br>When you book a class with us, you will be taught by one of these bartenders and learn so much from their years of experience.</p>
-      <br>
       <br>
       <div class="container">
         <div class="row">
@@ -65,8 +69,47 @@
         </div>
       </div>
       <br>
-      <br>
-      <p>So what are you waiting for? Book a class now!</p>
+      <p>So what are you waiting for? Book a class today!</p>
+    </section>
+    <section id="bartender-slideshow">
+      <div id="carouselBartenderIndicators" class="carousel slide" data-bs-ride="carousel">
+          <div class="carousel-indicators">
+            <button type="button" data-bs-target="#carouselBartenderIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+            <button type="button" data-bs-target="#carouselBartenderIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+            <button type="button" data-bs-target="#carouselBartenderIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+            <button type="button" data-bs-target="#carouselBartenderIndicators" data-bs-slide-to="3" aria-label="Slide 4"></button>
+            <button type="button" data-bs-target="#carouselBartenderIndicators" data-bs-slide-to="4" aria-label="Slide 5"></button>
+            <button type="button" data-bs-target="#carouselBartenderIndicators" data-bs-slide-to="5" aria-label="Slide 6"></button>
+          </div>
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img src="assets/images/bar-1.png" class="d-block w-100" alt="Jamie">
+            </div>
+            <div class="carousel-item">
+              <img src="assets/images/bar-2.png" class="d-block w-100" alt="Sarah">
+            </div>
+            <div class="carousel-item">
+              <img src="assets/images/bar-3.png" class="d-block w-100" alt="José">
+            </div>
+            <div class="carousel-item">
+              <img src="assets/images/bar-4.png" class="d-block w-100" alt="Laurel">
+            </div>
+            <div class="carousel-item">
+              <img src="assets/images/bar-5.png" class="d-block w-100" alt="Lawrence">
+            </div>
+            <div class="carousel-item">
+              <img src="assets/images/bar-6.png" class="d-block w-100" alt="Tolu">
+            </div>
+          </div>
+          <button class="carousel-control-prev" type="button" data-bs-target="#carouselBartenderIndicators" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+          </button>
+          <button class="carousel-control-next" type="button" data-bs-target="#carouselBartenderIndicators" data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+          </button>
+      </div>
     </section>
     <!-- /.meet your bartenders -->
     <hr>
