--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
           <br>
           <div class="col-12 col-sm-4">
             <blockquote class="blockquote">
-                <h5>I've now have a new favourite cocktail</h5>
+                <h5>I now have a new favourite cocktail</h5>
                 <p class="customer-quote">"I usually drink the class Gin & Tonic with Hendricks gin and Elderflower tonic water, but in this class I discovered Sloe Gin, and that drink is an absolute game changer. I will be making this more at home and ordering it on a night out!"</p>
                 <p>- Helen Foster</p>
                 <span class="fa fa-star checked"></span>
@@ -117,6 +117,14 @@
     </section>
     <!-- /.reviews -->
     <hr>
+    <!-- Inspired Breakpoint -->
+    <section>
+      <div class="container-fluid inspired-text">
+        <h3>Looking for some inspiration?</h3>
+        <h6>See the type of cocktails you will get to make in your class</h6>
+      </div>
+    </section>
+    <!--  /.inspired breakpoint -->
     <!-- Gallery -->
     <section id="flex-gallery">
       <div class="gin-gallery-container">
@@ -197,53 +205,52 @@
     <!-- /.gallery -->
     <!-- Slideshow -->
     <section id="slideshow">
-      <h3>Gallery</h3>
-        <div id="carouselGinIndicators" class="carousel slide" data-bs-ride="carousel">
-            <div class="carousel-indicators">
-              <button type="button" data-bs-target="#carouselGinIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-              <button type="button" data-bs-target="#carouselGinIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-              <button type="button" data-bs-target="#carouselGinIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
-              <button type="button" data-bs-target="#carouselGinIndicators" data-bs-slide-to="3" aria-label="Slide 4"></button>
-              <button type="button" data-bs-target="#carouselGinIndicators" data-bs-slide-to="4" aria-label="Slide 5"></button>
-              <button type="button" data-bs-target="#carouselGinIndicators" data-bs-slide-to="5" aria-label="Slide 6"></button>
-              <button type="button" data-bs-target="#carouselGinIndicators" data-bs-slide-to="6" aria-label="Slide 7"></button>
-              <button type="button" data-bs-target="#carouselGinIndicators" data-bs-slide-to="7" aria-label="Slide 8"></button>
+      <div id="carouselGinIndicators" class="carousel slide" data-bs-ride="carousel">
+          <div class="carousel-indicators">
+            <button type="button" data-bs-target="#carouselGinIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+            <button type="button" data-bs-target="#carouselGinIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+            <button type="button" data-bs-target="#carouselGinIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+            <button type="button" data-bs-target="#carouselGinIndicators" data-bs-slide-to="3" aria-label="Slide 4"></button>
+            <button type="button" data-bs-target="#carouselGinIndicators" data-bs-slide-to="4" aria-label="Slide 5"></button>
+            <button type="button" data-bs-target="#carouselGinIndicators" data-bs-slide-to="5" aria-label="Slide 6"></button>
+            <button type="button" data-bs-target="#carouselGinIndicators" data-bs-slide-to="6" aria-label="Slide 7"></button>
+            <button type="button" data-bs-target="#carouselGinIndicators" data-bs-slide-to="7" aria-label="Slide 8"></button>
+          </div>
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img src="assets/images/gunpowder-irish-gin.jpg" class="d-block w-100" alt="gunpowder irish gin bottle">
             </div>
-            <div class="carousel-inner">
-              <div class="carousel-item active">
-                <img src="assets/images/gunpowder-irish-gin.jpg" class="d-block w-100" alt="gunpowder irish gin bottle">
-              </div>
-              <div class="carousel-item">
-                <img src="assets/images/beige-gin-with-toppings.jpg" class="d-block w-100" alt="beige-coloured gin drink">
-              </div>
-              <div class="carousel-item">
-                <img src="assets/images/pouring-gin.jpg" class="d-block w-100" alt="bartender pouring an alcoholic beverage into a glass">
-              </div>
-              <div class="carousel-item">
-                <img src="assets/images/white-gin-in-tall-glass.jpg" class="d-block w-100" alt="white-coloured gin drink">
-              </div>
-              <div class="carousel-item">
-                <img src="assets/images/orange-gin.jpg" class="d-block w-100" alt="orange-coloured gin drink">
-              </div>
-              <div class="carousel-item">
-                <img src="assets/images/gin-shots.jpg" class="d-block w-100" alt="shot of gin">
-              </div>
-              <div class="carousel-item">
-                <img src="assets/images/group-of-women-drinking-gin.jpg" class="d-block w-100" alt="women drinking gin">
-              </div>
-              <div class="carousel-item">
-                <img src="assets/images/yellow-gin.jpg" class="d-block w-100" alt="yellow-coloured gin drink">
-              </div>
+            <div class="carousel-item">
+              <img src="assets/images/beige-gin-with-toppings.jpg" class="d-block w-100" alt="beige-coloured gin drink">
             </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselGinIndicators" data-bs-slide="prev">
-              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselGinIndicators" data-bs-slide="next">
-              <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Next</span>
-            </button>
-        </div>
+            <div class="carousel-item">
+              <img src="assets/images/pouring-gin.jpg" class="d-block w-100" alt="bartender pouring an alcoholic beverage into a glass">
+            </div>
+            <div class="carousel-item">
+              <img src="assets/images/white-gin-in-tall-glass.jpg" class="d-block w-100" alt="white-coloured gin drink">
+            </div>
+            <div class="carousel-item">
+              <img src="assets/images/orange-gin.jpg" class="d-block w-100" alt="orange-coloured gin drink">
+            </div>
+            <div class="carousel-item">
+              <img src="assets/images/gin-shots.jpg" class="d-block w-100" alt="shot of gin">
+            </div>
+            <div class="carousel-item">
+              <img src="assets/images/group-of-women-drinking-gin.jpg" class="d-block w-100" alt="women drinking gin">
+            </div>
+            <div class="carousel-item">
+              <img src="assets/images/yellow-gin.jpg" class="d-block w-100" alt="yellow-coloured gin drink">
+            </div>
+          </div>
+          <button class="carousel-control-prev" type="button" data-bs-target="#carouselGinIndicators" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+          </button>
+          <button class="carousel-control-next" type="button" data-bs-target="#carouselGinIndicators" data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+          </button>
+      </div>
     </section>
     <!-- /.slideshow -->
     <hr>
