add owl carousel template to index page

--- a/allaboutgin.html
+++ b/allaboutgin.html
@@ -91,7 +91,7 @@
         <div class="col-md-8">
           <p class="gin-rank">#3</p>
           <h4>Chapel Down Bacchus Gin 70cl, 41.2%</h4>
-          <h6>Best for a Gimlet</h6>
+          <h6 class="best-for">Best for a Gimlet</h6>
           <p class="price">£34.45</p>
           <p>amazon.co.uk</p>
           <a class="btn btn-secondary" target="_blank" href="https://www.amazon.co.uk/Chapel-Down-Bacchus-Gin/dp/B07CGPD6KW/ref=sr_1_10?crid=2F6X500TEZRAD&keywords=chapel+down&qid=1640627685&s=grocery&sprefix=chapel+dow%2Cgrocery%2C271&sr=1-10">Buy Now</a>
