replaced lorem ipsum content with fake reviews from customers

--- a/index.html
+++ b/index.html
@@ -74,98 +74,95 @@
     <!-- /.hero image -->
     <hr>
     <!-- Carousel Reviews -->
+    <h3>Customer Reviews</h3>
     <section class="section-owl-carousel">
-      <div class="owl-carousel owl-theme mt-5">
+      <div class="owl-carousel owl-theme mt-2">
         <div class="owl-item">
             <div class="card">
-                <div class="img-card"> <img src="https://images.pexels.com/photos/1222271/pexels-photo-1222271.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" alt=""> </div>
-                <div class="testimonial mt-4 mb-2"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus expedita dicta doloremque odit saepe quo natus aut accusantium alias blanditiis. </div>
-                <div class="name"> Denis Richie </div>
+                <div class="img-card"> <img src="assets/images/cust-a.jpg" alt="Marie"> </div>
+                <div class="testimonial mt-4 mb-2"> "I hosted a dinner party and used some of the great techniques that I learnt from this class and my guests loved the gin cocktails! They said it was better than the drinks they get from their local pub." </div>
+                <div>
+                  <span class="fa fa-star checked"></span>
+                  <span class="fa fa-star checked"></span>
+                  <span class="fa fa-star checked"></span>
+                  <span class="fa fa-star checked"></span>
+                  <span class="fa fa-star checked"></span>
+                </div>
+                <div class="name"> Marie Dellinger </div>
             </div>
         </div>
         <div class="owl-item">
             <div class="card">
-                <div class="img-card"> <img src="https://images.pexels.com/photos/1024311/pexels-photo-1024311.jpeg?auto=compress&cs=tinysrgb&dpr=3&h=750&w=1260" alt=""> </div>
-                <div class="testimonial mt-4 mb-2"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus expedita dicta doloremque odit saepe quo natus aut accusantium alias blanditiis. </div>
-                <div class="name"> Lisa Sthalekar </div>
+                <div class="img-card"> <img src="assets/images/cust-f.jpg" alt="Darshan"> </div>
+                <div class="testimonial mt-4 mb-2"> "I usually drink the classic Gin & Tonic with Hendricks gin and Elderflower tonic water, but in this class I discovered Sloe Gin, and that drink is an absolute game changer. I will be making this more at home and ordering it on a night out!" </div>
+                <div>
+                  <span class="fa fa-star checked"></span>
+                  <span class="fa fa-star checked"></span>
+                  <span class="fa fa-star checked"></span>
+                  <span class="fa fa-star checked"></span>
+                </div>
+                <div class="name"> Darshan Li-Smith </div>
             </div>
         </div>
         <div class="owl-item">
             <div class="card">
-                <div class="img-card"> <img src="https://images.pexels.com/photos/1036622/pexels-photo-1036622.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" alt=""> </div>
-                <div class="testimonial mt-4 mb-2"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus expedita dicta doloremque odit saepe quo natus aut accusantium alias blanditiis. </div>
-                <div class="name"> Elizabith Richie </div>
+                <div class="img-card"> <img src="assets/images/cust-g.jpg" alt="Sam"> </div>
+                <div class="testimonial mt-4 mb-2"> "I love entertaining guests and I work part time at my local bar. This class gave me the confidence I needed to make drinks that I know my guests will love but also how to impress customers who come to my bar by making off menu cocktails." </div>
+                <div>
+                  <span class="fa fa-star checked"></span>
+                  <span class="fa fa-star checked"></span>
+                  <span class="fa fa-star checked"></span>
+                  <span class="fa fa-star checked"></span>
+                  <span class="fa fa-star checked"></span>
+                </div>
+                <div class="name"> Sam Baelish </div>
             </div>
         </div>
         <div class="owl-item">
             <div class="card">
-                <div class="img-card"> <img src="https://images.pexels.com/photos/1212984/pexels-photo-1212984.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" alt=""> </div>
-                <div class="testimonial mt-4 mb-2"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus expedita dicta doloremque odit saepe quo natus aut accusantium alias blanditiis. </div>
-                <div class="name"> Daniel Xavier </div>
+                <div class="img-card"> <img src="assets/images/cust-h.jpg" alt="Lindsey"> </div>
+                <div class="testimonial mt-4 mb-2"> "Me and my girls went to this class and we had sooo much fun! It was entertaining, a lot of laughter and our bartender José was just amazing! I will never forget this day" </div>
+                <div>
+                  <span class="fa fa-star checked"></span>
+                  <span class="fa fa-star checked"></span>
+                  <span class="fa fa-star checked"></span>
+                  <span class="fa fa-star checked"></span>
+                  <span class="fa fa-star checked"></span>
+                </div>
+                <div class="name"> Lindsey Wool </div>
             </div>
         </div>
         <div class="owl-item">
             <div class="card">
-                <div class="img-card"> <img src="https://images.pexels.com/photos/1832959/pexels-photo-1832959.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" alt=""> </div>
-                <div class="testimonial mt-4 mb-2"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus expedita dicta doloremque odit saepe quo natus aut accusantium alias blanditiis. </div>
-                <div class="name"> Emma Watson </div>
+                <div class="img-card"> <img src="assets/images/cust-j.jpg" alt="Rebecca"> </div>
+                <div class="testimonial mt-4 mb-2"> "Went here with my boyfriend as a birthday gift, and it was terrific!! Learnt so many ways to make my standard G&Ts a thousand times better. Will come again!" </div>
+                <div>
+                  <span class="fa fa-star checked"></span>
+                  <span class="fa fa-star checked"></span>
+                  <span class="fa fa-star checked"></span>
+                  <span class="fa fa-star checked"></span>
+                  <span class="fa fa-star checked"></span>
+                </div>
+                <div class="name"> Rebecca James </div>
             </div>
         </div>
         <div class="owl-item">
             <div class="card">
-                <div class="img-card"> <img src="https://images.pexels.com/photos/718261/pexels-photo-718261.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt=""> </div>
-                <div class="testimonial mt-4 mb-2"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus expedita dicta doloremque odit saepe quo natus aut accusantium alias blanditiis. </div>
-                <div class="name"> Mohammad Imran </div>
+                <div class="img-card"> <img src="assets/images/cust-k.jpg" alt="Jason"> </div>
+                <div class="testimonial mt-4 mb-2"> "It was great that GinTopia were able to hold private bookings, as I was able to take my clients to this class. I might even see a promotion because of how well it went!" </div>
+                <div>
+                  <span class="fa fa-star checked"></span>
+                  <span class="fa fa-star checked"></span>
+                  <span class="fa fa-star checked"></span>
+                  <span class="fa fa-star checked"></span>
+                  <span class="fa fa-star checked"></span>
+                </div>
+                <div class="name"> Jason Mulberry </div>
             </div>
         </div>
     </div>
     </section>
     <!-- /.carousel reviews -->
-    <!-- Reviews
-    <section class="quote">
-      <h3>Customer Reviews:</h3>
-        <div class="row">
-          <div class="col-12 col-sm-4">
-            <blockquote class="blockquote">
-                <h5>Learnt some great techniques</h5>
-                <p class="customer-quote">"I hosted a dinner party and used some of the great techniques that I learnt from this class and my guests loved the gin cocktails! They said it was better than the drinks they get from their local pub."</p>
-                <p>- Marie Coleman</p>
-                <span class="fa fa-star checked"></span>
-                <span class="fa fa-star checked"></span>
-                <span class="fa fa-star checked"></span>
-                <span class="fa fa-star checked"></span>
-                <span class="fa fa-star checked"></span>
-            </blockquote>
-          </div>
-          <br>
-          <div class="col-12 col-sm-4">
-            <blockquote class="blockquote">
-                <h5>I now have a new favourite cocktail</h5>
-                <p class="customer-quote">"I usually drink the class Gin & Tonic with Hendricks gin and Elderflower tonic water, but in this class I discovered Sloe Gin, and that drink is an absolute game changer. I will be making this more at home and ordering it on a night out!"</p>
-                <p>- Helen Foster</p>
-                <span class="fa fa-star checked"></span>
-                <span class="fa fa-star checked"></span>
-                <span class="fa fa-star checked"></span>
-                <span class="fa fa-star checked"></span>
-                <span class="fa fa-star checked"></span>
-            </blockquote>
-          </div>
-          <br>
-          <div class="col-12 col-sm-4">
-            <blockquote class="blockquote">
-                <h5>More confident behind the bar!</h5>
-                <p class="customer-quote">"I love entertaining guests and I work part time at my local bar. This class gave me the confidence I needed to make drinks that I know my guests will love but also how to impress customers who come to my bar by making off menu cocktails."</p>
-                <p>- Jamie Childs</p>
-                <span class="fa fa-star checked"></span>
-                <span class="fa fa-star checked"></span>
-                <span class="fa fa-star checked"></span>
-                <span class="fa fa-star checked"></span>
-                <span class="fa fa-star checked"></span>
-            </blockquote>
-          </div>
-        </div>
-    </section>
-    /.reviews -->
     <hr>
     <!-- Inspired Breakpoint -->
     <section>
