start layout for signup page

--- a/signup.html
+++ b/signup.html
@@ -46,7 +46,29 @@
     </nav>
     <!-- /.navbar -->
     <hr>
-    
+    <!-- Top Image -->
+    <section>
+      <div>
+        <img class="signup-gin img-fluid" src="assets/images/brooklyn-gin.png" alt="gin-photo">
+      </div>
+    </section>
+    <!-- /.top image -->
+    <hr>
+    <!-- Sign Up/Sign In -->
+    <section>
+      <div>
+        
+      </div>
+    </section>
+    <!-- /.sign up/sign in -->
+    <hr>
+    <!-- Bottom Image -->
+    <section>
+      <div>
+        <img class="signup-gin img-fluid" src="assets/images/blogger-gin.png" alt="gin-photo">
+      </div>
+    </section>
+    <!-- /.bottom image -->
     <hr>
     <!-- Footer -->
     <section>
