remove green background on text above gallery

--- a/index.html
+++ b/index.html
@@ -167,8 +167,7 @@
     <!-- Inspired Breakpoint -->
     <section>
       <div class="container-fluid inspired-text">
-        <h3>Looking for some inspiration?</h3>
-        <h6>See the type of cocktails you will get to make in your class</h6>
+        <h3>Want to see what you'll be making?</h3>
       </div>
     </section>
     <!--  /.inspired breakpoint -->
