--- a/bookaclass.html
+++ b/bookaclass.html
@@ -111,6 +111,10 @@
     </section>
     <!-- /.meet your bartenders -->
     <hr>
+    <!-- Calendly inline widget begin -->
+    <div class="calendly-inline-widget" data-url="https://calendly.com/gintopia/gin-cocktail-making-class?primary_color=967950" style="min-width:300px;height:630px;"></div>
+    <!-- Calendly inline widget end -->
+    <hr>
     <!-- Footer -->
     <section>
       <footer class="text-center text-white" style="background-color: #d3b488;">
@@ -152,5 +156,7 @@
     <!-- Bootstrap Bundles -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
+    <!-- Calendly -->
+    <script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js" async></script>
 </body>
 </html>
