update sign in form template to include a switch over

--- a/contactus.html
+++ b/contactus.html
@@ -56,11 +56,10 @@
     <!-- /.navbar -->
     <hr>
     <!-- Hero Image -->
-    <div>
+    <!--<div>
       <img src="assets/images/five-gins.png" class="img-fluid" alt="row of 5 gin cocktails">
-    </div>
+    </div>-->
     <!-- /.hero image -->
-    <hr>
     <!-- Contact Us -->
     <section class="container-fluid">
       <div class="row bg-color-contact">
