add class to the p tag in the signup page to prevent other changes occuring

--- a/signup.html
+++ b/signup.html
@@ -70,12 +70,12 @@
           <div class="overlay-su">
             <div class="overlay-panel-su overlay-left-su">
               <h1>Welcome Back!</h1>
-              <p>To keep connected with us please login with your personal info</p>
+              <p class="p-signup">To keep connected with us please login with your personal info</p>
               <button class="button-signup" class="ghost" id="signIn">Sign In</button>
             </div>
             <div class="overlay-panel-su overlay-right-su">
               <h1>Hello, Friend!</h1>
-              <p>Enter your personal details and start journey with us</p>
+              <p class="p-signup">Enter your personal details and start journey with us</p>
               <button class="button-signup" class="ghost" id="signUp">Sign Up</button>
             </div>
           </div>
@@ -107,7 +107,7 @@
             <button type="submit" name="login_btn" class="btn btn-secondary">Register Account</button>
           </form>
           <br>
-          <p>Already Have an Account?<br><a class="register" href="assets/php/login.php">Login Instead</a></p>
+          <p class="p-signup">Already Have an Account?<br><a class="register" href="assets/php/login.php">Login Instead</a></p>
         </div>
       </div>
       <div class="login">
@@ -125,7 +125,7 @@
             <button type="submit" name="login_btn" class="btn btn-secondary">Login</button>
           </form>
           <br>
-          <p>No Account?<br><a class="register" href="assets/php/register.php">Register Instead</a></p>
+          <p class="p-signup">No Account?<br><a class="register" href="assets/php/register.php">Register Instead</a></p>
         </div>
       </div>
     </section>-->
@@ -158,7 +158,7 @@
         <hr>
         <!-- Section: CTA -->
         <section class="">
-          <p class="d-flex justify-content-center align-items-center">
+          <p class="p-signup" class="d-flex justify-content-center align-items-center">
             <span class="me-3">Book a class with us!</span>
             <a class="btn btn-light" href="bookaclass.html">Book Now</a>
           </p>
