--- a/signup.html
+++ b/signup.html
@@ -70,74 +70,19 @@
           <div class="overlay-su">
             <div class="overlay-panel-su overlay-left-su">
               <h1>Welcome Back!</h1>
-              <p class="p-signup">To keep connected with us please login with your personal info</p>
+              <p class="p-signup">To keep connected with us, please login with your personal info</p>
               <button class="button-signup" class="ghost" id="signIn">Sign In</button>
             </div>
             <div class="overlay-panel-su overlay-right-su">
               <h1>Hello, Friend!</h1>
-              <p class="p-signup">Enter your personal details and start journey with us</p>
+              <p class="p-signup">Enter your personal details and start your journey with us</p>
               <button class="button-signup" class="ghost" id="signUp">Sign Up</button>
             </div>
           </div>
         </div>
       </div>
-      </section>
-    <!-- Sign Up/Sign In -->
-    <!--<section class="signup-container">
-      <div class="signup">
-        <h4>New GinTopians Register Here</h4>
-        <div class="container">
-          <form action="index.php">
-            <div class="mb-3">
-              <label for="fname" class="form-label">First Name</label>
-              <input type="text" name="name" class="form-control" placeholder="Jane" required>
-            </div>
-            <div class="mb-3">
-              <label for="lname" class="form-label">Last Name</label>
-              <input type="text" name="name" class="form-control" placeholder="Doe" required>
-            </div>
-            <div class="mb-3">
-              <label for="email" class="form-label">Email address</label>
-              <input type="email" name="email" class="form-control" placeholder="jane@doe.com" required>
-            </div>
-            <div class="mb-3">
-              <label for="password" class="form-label">Password</label>
-              <input type="password" name="password" class="form-control" placeholder="" required>
-            </div>
-            <button type="submit" name="login_btn" class="btn btn-secondary">Register Account</button>
-          </form>
-          <br>
-          <p class="p-signup">Already Have an Account?<br><a class="register" href="assets/php/login.php">Login Instead</a></p>
-        </div>
-      </div>
-      <div class="login">
-        <h4>Existing GinTopians Sign In Here</h4>
-        <div class="container">
-          <form action="index.php">
-            <div class="mb-3">
-              <label for="email" class="form-label">Email address</label>
-              <input type="email" name="email" class="form-control" placeholder="jane@doe.com" required>
-            </div>
-            <div class="mb-3">
-              <label for="password" class="form-label">Password</label>
-              <input type="password" name="password" class="form-control" placeholder="" required>
-            </div>
-            <button type="submit" name="login_btn" class="btn btn-secondary">Login</button>
-          </form>
-          <br>
-          <p class="p-signup">No Account?<br><a class="register" href="assets/php/register.php">Register Instead</a></p>
-        </div>
-      </div>
-    </section>-->
+    </section>
     <!-- /.sign up/sign in -->
-    <hr>
-    <!-- Bottom Image -->
-    <!--<section>
-      <div>
-        <img class="signup-gin img-fluid" src="assets/images/blogger-gin.png" alt="gin-photo">
-      </div>
-    </section>-->
-    <!-- /.bottom image -->
     <hr>
     <!-- Footer -->
     <section>
@@ -158,7 +103,7 @@
         <hr>
         <!-- Section: CTA -->
         <section class="">
-          <p class="p-signup" class="d-flex justify-content-center align-items-center">
+          <p class="d-flex justify-content-center align-items-center">
             <span class="me-3">Book a class with us!</span>
             <a class="btn btn-light" href="bookaclass.html">Book Now</a>
           </p>
