--- a/index.html
+++ b/index.html
@@ -338,5 +338,7 @@
     <!-- Owl Carousel JS -->
     <script src="assets/js/owlCarousel.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.2.1/owl.carousel.js"></script>
+    <!-- MDB CDN -->
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.10.1/mdb.min.js"></script>
 </body>
 </html>
