--- a/signup.html
+++ b/signup.html
@@ -66,7 +66,7 @@
             <button class="button-signup">Sign In</button>
           </form>
         </div>
-        <div class="overlay-container-su">
+        <div id="left-right" class="overlay-container-su">
           <div class="overlay-su">
             <div class="overlay-panel-su overlay-left-su">
               <h1>Welcome Back!</h1>
