add fun to the fun fact section on all about gin page

--- a/allaboutgin.html
+++ b/allaboutgin.html
@@ -102,7 +102,7 @@
       </div>
       <br>
       <div class="container-fluid quick-facts">
-          <i class="fas fa-cocktail"></i><h5>Fact #1</h5>
+          <i class="fas fa-cocktail"></i><h5>Fun Fact #1</h5>
           <p>Unlike drinks that are classified according to their distilling technique or the ingredients used, gin is a matter of taste. By which we mean that gin is only gin if it has juniper as its predominant flavour and an alcohol content of at least 37.5% ABV.</p>
       </div>
       <br>
@@ -138,7 +138,7 @@
       </div>
       <br>
       <div class="container-fluid quick-facts">
-        <i class="fas fa-cocktail"></i><h5>Fact #2</h5>
+        <i class="fas fa-cocktail"></i><h5>Fun Fact #2</h5>
         <p>Now, we may be a nation of gin and tonic devotees, but that doesn't mean that your imagination has to stop at 'ice and a slice' (of lemon, or even lime) when making one. Take a look at the bottle to find what botanicals your gin was made with and choose a few as your garnish. Cucumber, coriander, chilli, a bay leaf, a twist of black pepper - when it comes to the perfect G&T, variety is the spice of life. One of the reasons gin remains so popular is that it can carry big flavours, so make the most of it.</p>
       </div>
       <br>
@@ -174,7 +174,7 @@
       </div>
       <br>
       <div class="container-fluid quick-facts">
-        <i class="fas fa-cocktail"></i><h5>Fact #3</h5>
+        <i class="fas fa-cocktail"></i><h5>Fun Fact #3</h5>
         <p>Holland done it first! Gin is England's national spirit and there are few things more English than a refreshing gin & tonic. Most of the most famous gins you see around the world hail from the UK, so it is forgivable to think that the spirit first came from here. The English actually discovered gin when they were fighting the Thirty Years' War in the 17th century in Holland and saw Dutch soldiers drinking Jenever to boost morale before heading into battle. The term “Dutch Courage” was born, and the English brought the idea of making and drinking gin back with them. It would take another 150 years before they would have their own version.</p>
       </div>
       <br>
