--- a/contactus.html
+++ b/contactus.html
@@ -86,14 +86,16 @@
     <hr>
     <!-- Google Map -->
     <section>
-      <iframe
-        width="100%"
-        height="400"
-        style="border:0"
-        loading="lazy"
-        allowfullscreen
-        src="https://www.google.com/maps/embed/v1/place?q=place_id:ChIJldu7N84EdkgRiy39aFVBIFE&key=AIzaSyAMptgYoxpwQ5ZA-ztcsITFsTN3AGATTSM">
-      </iframe>
+      <div>
+        <iframe
+          width="100%"
+          height="400"
+          style="border:0"
+          loading="lazy"
+          allowfullscreen
+          src="https://www.google.com/maps/embed/v1/place?q=place_id:ChIJldu7N84EdkgRiy39aFVBIFE&key=AIzaSyAMptgYoxpwQ5ZA-ztcsITFsTN3AGATTSM">
+        </iframe>
+      </div>
     </section>
     <!-- /.google map -->
     <hr>
