--- a/signup.html
+++ b/signup.html
@@ -47,8 +47,8 @@
     <!-- /.navbar -->
     <hr>
     <!-- Sign Up/Sign In -->
-    <section id="gintopia-signup">
-      <div class="container-su" id="containersu">
+    <section class="gintopia-signup">
+      <div class="container-su laptop-signup" id="containersu">
         <div class="form-container-su sign-up-container-su">
           <form class="form-signup" action="#">
             <h1>Create Account</h1>
@@ -79,6 +79,27 @@
               <button class="button-signup" class="ghost" id="signUp">Sign Up</button>
             </div>
           </div>
+        </div>
+      </div>
+    </section>
+    <section class="gintopia-signup-mobile">
+      <div class="container-su-mobile mobile-signup">
+        <div class="form-container-su-mobile sign-up-container-su-mobile">
+          <form class="form-signup-mobile" action="#">
+            <h1>Create Account</h1>
+            <input class="input-signup" type="text" placeholder="Name" required/>
+            <input class="input-signup" type="email" placeholder="Email" required/>
+            <input class="input-signup" type="password" placeholder="Password" required/>
+            <button class="button-signup">Sign Up</button>
+          </form>
+        </div>
+        <div class="form-container-su-mobile sign-in-container-su-mobile">
+          <form class="form-signup-mobile" action="#">
+            <h1>Sign in</h1>
+            <input class="input-signup" type="email" placeholder="Email" required/>
+            <input class="input-signup" type="password" placeholder="Password" required/>
+            <button class="button-signup">Sign In</button>
+          </form>
         </div>
       </div>
     </section>
