--- a/contactus.html
+++ b/contactus.html
@@ -63,26 +63,24 @@
     <!-- Contact Us -->
     <section>
       <div class="container-contact">
-        <div class="row bg-color-contact item-contact parent-email">
-          <div class="col child-email">
-            <h3>Have a question?</h3>
-            <h6 class="text-center">Send us an email today!</h6>
-            <div class="center-form">
-                <form onsubmit ="return sendMail(this);"> 
-                    <input type="text" name="name" id="fullname" class="form-control" placeholder="Name" required />
-                    <input type="email" name="emailaddress" id="emailaddress" class="form-control" placeholder="Email" required />
-                    <textarea rows="4" name="ginbooking" id="ginbooking" class="form-control" placeholder="Gin Class Enquiry" required></textarea>
-                    <br>
-                    <div class="form-row text-center">
-                        <div class="col">
-                            <button type="submit" class="btn btn-secondary">Send Enquiry</button>
-                        </div>
-                    </div>
-                </form>
-            </div>
+        <div class="center-form contact-items">
+          <div class="email">
+            <form onsubmit ="return sendMail(this);"> 
+              <h3>Have a question?</h3>
+              <h6 class="text-center">Send us an email today!</h6>
+              <input type="text" name="name" id="fullname" class="form-control" placeholder="Name" required />
+              <input type="email" name="emailaddress" id="emailaddress" class="form-control" placeholder="Email" required />
+              <textarea rows="4" name="ginbooking" id="ginbooking" class="form-control" placeholder="Gin Class Enquiry" required></textarea>
+              <br>
+              <div class="form-row text-center">
+                  <div class="col">
+                      <button type="submit" class="btn btn-secondary">Send Enquiry</button>
+                  </div>
+                </div>
+            </form>
           </div>
         </div>
-        <div class="item-contact">
+        <div class="contact-items">
           <iframe
             width="100%"
             height="100%"
