include all relevant stylesheets and scripts on index.html

--- a/index.html
+++ b/index.html
@@ -18,6 +18,15 @@
     @import url('https://fonts.googleapis.com/css2?family=Handlee&display=swap');
     @import url('https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap');
   </style>
+  <!-- Emailjs -->
+  <script type="text/javascript"
+    src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js">
+  </script>
+  <script type="text/javascript">
+  (function(){
+      emailjs.init("user_OAwOOo2rDsu6jWBOML5qZ");
+  })();
+  </script>
   <!-- JQuery -->
   <script
     src="https://code.jquery.com/jquery-3.6.0.js"
@@ -340,5 +349,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.2.1/owl.carousel.js"></script>
     <!-- MDB CDN -->
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.10.1/mdb.min.js"></script>
+    <!-- Custom JS Script -->
+    <script src="assets/js/signUp.js"></script>
 </body>
 </html>
